--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="#">Photography</a>
         <a href="#">Graphic Designs</a>
         <a href="#">Cinematography</a>
+        <a href="#">What They Say</a>
         <a href="#">Contact Us</a>
       </div>
     </div>
@@ -30,32 +31,37 @@
         </div>
         <div class="about-text">
           <h2>Hello, Bonjour :)</h2>
-          <p>My name is Sydney Tran and I am the heart of creativity for my users.</p>
+          <p>My name is Sydney Tran and I am the <u>heart of creativity</u> for my users.</p>
           <p>
             I design pieces that are meaningful, unique, and impactful.
             <br>
-            Currently, Communications Director @Students for Music and Wellness, Social Media Intern @Ascend Canada and Director of Marketing for its University of Waterloo student chapter, Product Design Intern @SwayBrand, and VP Marketing @University of Waterloo Chinese Student Association
             <br>
-            Prev Marketing Intern @TD Bank
+            Currently, Communications Director <u>@Students for Music and Wellness</u>, Social Media Intern <u>@Ascend Canada</u> and Director of Marketing for its <u>University of Waterloo</u> student chapter, Product Design Intern <u>@SwayBrand</u>, and VP Marketing <u>@University of Waterloo Chinese Student Association</u>
+            <br>
+            <br>
+            Prev Marketing Intern <u>@TD Bank</u>
           </p>
         </div>
       </section>
     </div>
 
-   <div class="content">
-  <section class="my-photography">
-    <h2 class="section-title">My Photography</h2>
-    <div class="divider"></div>
-    <p class="photography-blurb">
-      I adeptly handle seven different photographic styles—including product, fashion, long exposure, portraits, landscapes, wildlife, and action pictures—all while capturing moments that go beyond the usual and shed light on distinctive viewpoints. I have an intuitive eye for detail and am proficient in Adobe Lightroom. My artistic ability combines compositional brilliance with the technical dexterity of using a DSLR to create visually compelling and inspirational storytelling.
-    </p>
-    <div class="image-grid">
-      <img src="path_to_image_1.jpg" alt="Photography 1">
-      <img src="path_to_image_2.jpg" alt="Photography 2">
-      <!-- Add more image elements as needed -->
+    <div class="content">
+      <section class="photography">
+        <h2>My Photography</h2>
+        <div class="separator"></div>
+        <p>
+          I adeptly handle seven different photographic styles—including product, fashion, long exposure, portraits, landscapes, wildlife, and action pictures—all while capturing moments that go beyond the usual and shed light on distinctive viewpoints. I have an intuitive eye for detail and am proficient in Adobe Lightroom. My artistic ability combines compositional brilliance with the technical dexterity of using a DSLR to create visually compelling and inspirational storytelling.
+        </p>
+        <div class="image-grid">
+          <img src="Wildlife.png" alt="Wildlife">
+          <img src="Portrait.png" alt="Portrait">
+          <img src="Action.png" alt="Action">
+          <img src="Product.png" alt="Product">
+          <img src="Landscape.png" alt="Landscape">
+          <img src="LongExposure.png" alt="LongExposure">
+        </div>
+      </section>
     </div>
-  </section>
-</div>
 
     <div class="Graphic Designs">
       <!-- Your page content goes here -->
@@ -73,10 +79,11 @@
 </html>
 
 <style>
+  /* Style for Navbar*/
   .navbar {
     position: sticky;
     top: 0;
-    width: 1440px;
+    width: auto;
     height: 20px;
     background-color: #5B0D0D;
     color: #FFFFFF;
@@ -106,7 +113,7 @@
     margin-right: 0;
   }
 
-  /* About Me Section*/
+  /* Style for About Me Section*/
   .about-me {
     display: flex;
     align-items: center;
@@ -133,42 +140,63 @@
     font-size: 24px;
     line-height: 1.5;
   }
+
+  /* Style for Photography section */
+  .photography {
+    background-color: #7C7C7C;
+    padding: 40px;
+    text-align: center;
+    color: #FFFFFF;
+  }
+
+  .photography h2 {
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 60px;
+  }
+
+  .separator {
+    width: 733px;
+    height: 2px;
+    background-color: #FFFFFF;
+    margin: 30px auto;
+  }
+
+  .photography p {
+    font-family: "Cardo", serif;
+    font-size: 24px;
+    margin-bottom: 30px;
+  }
+
+  .photo-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+  }
+
+  .photo-grid img {
+    width: 100%;
+    height: auto;
+    max-width: calc(100% - 30px);
+    margin-bottom: 30px;
+  }
+
+  /*
+  Sydney_Tran_MainImage.png
   
-  /* Styles for the My Photography section */
-.my-photography {
-  text-align: center;
-  padding: 60px 70px;
-}
-
-.section-title {
-  font-family: 'Josefin Sans', sans-serif;
-  font-size: 60px;
-  color: #FFFFFF;
-  margin-bottom: 30px;
-}
-
-.divider {
-  width: 733px;
-  height: 2px;
-  background-color: #FFFFFF;
-  margin-bottom: 30px;
-}
-
-.photography-blurb {
-  font-size: 18px;
-  line-height: 1.6;
-  color: #FFFFFF;
-  margin-bottom: 30px;
-}
-
-.image-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-gap: 10px;
-}
-
-.image-grid img {
-  max-width: 100%;
-  height: auto;
-}
+  Action.png
+  Wildlife.png
+  Landscape.png
+  LongExposure.png
+  Portrait.png
+  Product.png
+  
+  UwcsaBonfire.png
+  UwcsaHiring.png
+  UwcsaOrientation.png
+  
+  TheArtofMovingOn.png
+  TuningDreams.png
+  
+  Fashion.png
+  */
 </style>
