--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="content">
       <section class="photography">
         <h2>Photography</h2>
-        <div class="separator"></div>
+        <div class="white-line"></div>
         <p>
           I adeptly handle seven different photographic styles—including product, fashion, long exposure, portraits, landscapes, wildlife, and action pictures—all while capturing moments that go beyond the usual and shed light on distinctive viewpoints. I have an intuitive eye for detail and am proficient in Adobe Lightroom. My artistic ability combines compositional brilliance with the technical dexterity of using a DSLR to create visually compelling and inspirational storytelling.
         </p>
@@ -67,7 +67,7 @@
       <section class="graphic-designs">
         <div class="graphic-designs-content">
           <h2>Graphic Designs</h2>
-          <div class="separator"></div>
+          <div class="red-line"></div>
           <p class="designs-blurb">
             I am an expert in Adobe Illustrator and Photoshop, and I use my imagination to create visually striking and inventive designs by skillfully utilizing a variety of tools, such as 3D rendering, the accuracy of the pen tool, and the fluidity of the warp tool.
           </p>
@@ -84,7 +84,7 @@
       <section class="cinematography">
         <div class="cinematography-content">
           <h2>Cinematography</h2>
-          <div class="separator"></div>
+          <div class="white-line"></div>
           <p class="cinematography-blurb">
             I have a strong sense of storytelling and am skilled with the Adobe Suite, especially Rush and Premiere Pro. I use these skills to craft complex stories into engaging documentaries and movies. Through the use of mood boards, storyboards, and a variety of lighting, audio, and filmmaking tools, I create immersive visual experiences by bringing the imagination to life.
           </p>
@@ -111,8 +111,7 @@
       <section class="What They Say">
         <div class="what-they-say-content">
           <h2>What They Say</h2>
-          <div class="separator"></div>
-          <hr class="separator">
+          <div class="red-line"></div>
           <table class="testimonial-table">
             <tr>
               <td>
@@ -271,7 +270,7 @@
     font-size: 60px;
   }
 
-  .separator {
+  .white-line {
     width: 733px;
     height: 2px;
     background-color: #FFFFFF;
@@ -314,11 +313,11 @@
     margin-bottom: 30px;
   }
 
-  .separator {
+  .red-line {
     width: 733px;
     height: 2px;
-    background-color: #FFFFFF;
-    margin-bottom: 30px;
+    background-color: #5B0D0D;
+    margin: 30px auto;
   }
 
   .designs-blurb {
@@ -356,11 +355,11 @@
     margin-bottom: 30px;
   }
 
-  .separator {
+  .white-line {
     width: 733px;
     height: 2px;
     background-color: #FFFFFF;
-    margin-bottom: 30px;
+    margin: 30px auto;
   }
 
   .cinema-blurb {
@@ -400,13 +399,6 @@
   .cinematography-content h2 {
     font-family: "Josefin Sans", sans-serif;
     font-size: 60px;
-    margin-bottom: 30px;
-  }
-
-  .separator {
-    width: 733px;
-    height: 3px;
-    background-color: #FFFFFF;
     margin-bottom: 30px;
   }
 
