--- a/index.html
+++ b/index.html
@@ -153,14 +153,9 @@
     <div class="Contact">
       <section class="contact-section">
         <h2>Let's Work Together!</h2>
-        <hr class="separator">
         <div class="contact-details">
-          <div class="contact-info">
-            <p><a href="mailto:swtran@uwaterloo.ca"><img src="email_icon.png" alt="Email icon"> swtran@uwaterloo.ca</a></p>
-            <p><img src="facebook_icon.png" alt="Facebook icon"> @sydneytran</p>
-          </div>
           <div class="contact-form-container">
-            <form action="/submit_form" method="post">
+              <form action="mailto:ssss@uwaterloo.ca" method="post" enctype="text/plain">
               <div class="form-row">
                 <label for="fname">First Name:</label>
                 <input type="text" id="fname" name="fname" class="input-field">
@@ -494,13 +489,7 @@
     font-family: "Josefin Sans", sans-serif;
     font-size: 60px;
     margin-bottom: 30px;
-  }
-
-  .separator {
-    width: 733px;
-    height: 2px;
-    background-color: white;
-    margin: 30px 0;
+    float: left;
   }
 
   .contact-details {
