--- a/index.html
+++ b/index.html
@@ -86,19 +86,21 @@
             I have a strong sense of storytelling and am skilled with the Adobe Suite, especially Rush and Premiere Pro. I use these skills to craft complex stories into engaging documentaries and movies. Through the use of mood boards, storyboards, and a variety of lighting, audio, and filmmaking tools, I create immersive visual experiences by bringing the imagination to life.
           </p>
           <div class="cinematography-images">
-            <div class="cinematography-image">
-              <a href="https://youtu.be/rqYzTU765tQ" target="_blank">
-                <img src="TheArtofMovingOn.png" alt="Cinematography Image 1" width="554" height="308">
-              </a>
-              <p>
-              <p>This silent film, <a href="https://youtu.be/rqYzTU765tQ" target="_blank" style="color: #5B0D0D;text-decoration: underline;">The Art of Moving On</a>, tells a story of a young woman experiencing heartbreak. This documentary aims to express a storyline in two emotions—freedom & loneliness—simply through a camera lens.</p>
-            </div>
-            <div class="cinematography-image">
-              <a href="https://youtu.be/g411S9yl8dU" target="_blank">
-                <img src="TuningDreams.png" alt="Cinematography Image 2" width="554" height="308">
-              </a>
-              <p>This documentary, <a href="https://youtu.be/g411S9yl8dU" target="_blank" style="color: #5B0D0D;text-decoration: underline;">Tuning Dreams</a>, tells a story of a recent graduate student fighting for his dreams. This documentary aims to reveal the strenuous days that come with making music and being unsure of what the future holds.</p>
-            </div>
+            <div class="film-grid">
+                      <div class="cinematography-image">
+                        <a href="https://youtu.be/rqYzTU765tQ" target="_blank">
+                          <img src="TheArtofMovingOn.png" alt="Cinematography Image 1" width="554" height="308">
+                        </a>
+                        <p>
+                        <p>This silent film, <a href="https://youtu.be/rqYzTU765tQ" target="_blank" style="color: #5B0D0D;text-decoration: underline;">The Art of Moving On</a>, tells a story of a young woman experiencing heartbreak. This documentary aims to express a storyline in two emotions—freedom & loneliness—simply through a camera lens.</p>
+                      </div>
+                      <div class="cinematography-image">
+                        <a href="https://youtu.be/g411S9yl8dU" target="_blank">
+                          <img src="TuningDreams.png" alt="Cinematography Image 2" width="554" height="308">
+                        </a>
+                        <p>This documentary, <a href="https://youtu.be/g411S9yl8dU" target="_blank" style="color: #5B0D0D;text-decoration: underline;">Tuning Dreams</a>, tells a story of a recent graduate student fighting for his dreams. This documentary aims to reveal the strenuous days that come with making music and being unsure of what the future holds.</p>
+                      </div>
+              </div>
           </div>
         </div>
       </section>
@@ -155,7 +157,7 @@
         <h2>Let's Work Together!</h2>
         <div class="contact-details">
           <div class="contact-form-container">
-              <form action="mailto:ssss@uwaterloo.ca" method="post" enctype="text/plain">
+            <form action="mailto:ssss@uwaterloo.ca" method="post" enctype="text/plain">
               <div class="form-row">
                 <label for="fname">First Name:</label>
                 <input type="text" id="fname" name="fname" class="input-field">
@@ -288,7 +290,7 @@
     max-width: 409;
     max-height: 300;
     margin-bottom: 40px;
-    
+
   }
 
   /* Graphic design section */
@@ -323,61 +325,18 @@
   }
 
   .designs-grid {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 40px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+    place-items: center;
   }
 
   .designs-grid img {
-    width: 415px;
-    height: 415px;
-  }
-
-  /* Style for Cinematography */
-  .cinematography {
-    background-color: #7C7C7C;
-    padding: 40px;
-  }
-
-  .cinematography-content {
-    text-align: center;
-    color: #FFFFFF;
-  }
-
-  .cinematography-content h2 {
-    font-family: 'Josefin Sans', sans-serif;
-    font-size: 60px;
-    margin-bottom: 30px;
-  }
-
-  .white-line {
-    width: 733px;
-    height: 2px;
-    background-color: #FFFFFF;
-    margin: 30px auto;
-  }
-
-  .cinema-blurb {
-    font-family: 'Cardo', serif;
-    font-size: 24px;
-    line-height: 1.5;
-    margin-bottom: 30px;
-  }
-
-  .cinema-images {
-    display: flex;
-    justify-content: space-between;
-    padding: 0 40px;
-  }
-
-  .cinema-image-left,
-  .cinema-image-right {
-    width: 554px;
-  }
-
-  .cinema-image {
-    width: 554px;
-    height: 308px;
+    width: 100%;
+    place-items: center;
+    max-width: 400;
+    max-height: 400;
+    margin-bottom: 40px;
   }
 
   /* style for Cinematography */
@@ -426,6 +385,22 @@
   .right-caption {
     width: 554px;
     text-align: center;
+  }
+  
+   .film-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px;
+    place-items: center;
+  }
+
+  .film-grid img {
+    width: 100%;
+    place-items: center;
+    max-width: 500;
+    max-height: 275;
+    margin-bottom: 40px;
+
   }
 
   /* style for What they say*/
