--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       </div>
       <div class="right-section">
         <a href="#about">About Me</a>
-        <a href="#">Photography</a>
-        <a href="#">Graphic Designs</a>
-        <a href="#">Cinematography</a>
-        <a href="#">What They Say</a>
-        <a href="#">Contact</a>
+        <a href="#photography">Photography</a>
+        <a href="#graphic designs">Graphic Designs</a>
+        <a href="#cinematography">Cinematography</a>
+        <a href="#what they say">What They Say</a>
+        <a href="#contact">Contact</a>
       </div>
     </div>
 
@@ -45,7 +45,7 @@
       </section>
     </div>
 
-    <div class="content">
+    <div id="photography" class="content">
       <section class="photography">
         <h2>Photography</h2>
         <div class="white-line"></div>
@@ -60,7 +60,7 @@
       </section>
     </div>
 
-    <div class="Graphic Designs">
+    <div id="graphic designs" class="Graphic Designs">
       <section class="graphic-designs">
         <div class="graphic-designs-content">
           <h2>Graphic Designs</h2>
@@ -77,7 +77,7 @@
       </section>
     </div>
 
-    <div class="Cinematography">
+    <div id="cinematography" class="Cinematography">
       <section class="cinematography">
         <div class="cinematography-content">
           <h2>Cinematography</h2>
@@ -92,17 +92,15 @@
             <a href="https://youtu.be/g411S9yl8dU" target="_blank">
               <img src="TuningDreams.png" alt="Tuning"> </a>
 
-            <p>This silent film, <a href="https://youtu.be/rqYzTU765tQ" target="_blank" style="color: #5B0D0D; text-decoration: underline;">The Art of Moving On</a>, tells a story of a young woman experiencing heartbreak. This documentary aims to express a storyline in two emotions—freedom & loneliness—simply through a camera lens.</p>
+            <p>This silent film, <a href="https://youtu.be/rqYzTU765tQ" target="_blank" style="color: #5B0D0D; text-decoration: underline;">The Art of Moving On</a>, tells a story of a young woman experiencing heartbreak. This documentary aims to express a storyline in two emotions—freedom and loneliness—simply through a camera lens.</p>
 
             <p>This documentary, <a href="https://youtu.be/g411S9yl8dU" target="_blank" style="color: #5B0D0D;text-decoration: underline;">Tuning Dreams</a>, tells a story of a recent graduate student fighting for his dreams. This documentary aims to reveal the strenuous days that come with making music and being unsure of what the future holds.</p>
-
-
           </div>
         </div>
       </section>
     </div>
 
-    <div class="What They Say">
+    <div id="what they say" class="What They Say">
       <section class="What They Say">
         <div class="what-they-say-content">
           <h2>What They Say</h2>
@@ -115,8 +113,7 @@
               </td>
               <td>
                 <p class="quote">
-                  "Sydney stood out immediately. Her talents were easily apparent (she is easily one of the most talented students I have ever had in Computer Art & Design!), but what stood out even more was here willingness to ask for and accept criticism. For someone with as much innate talent as she possesses, it could be easy for Sydney to "phone it in" and still do extremely well in the class. Instead, she is consistently seeking my advice and then actually implementing changes based on that advice. In this time of virtual instruction, it is also relevant to point out that Sydney always comes to class on time, and is the only student who consistently shows herself on video in the Zoom meetings. She clearly takes to heart my request for as meaningful a connection as we can make through the computer screen, and it speaks volumes about her respect and empathy when she does."
-
+                  "Sydney stood out immediately. Her talents were easily apparent (she is easily one of the most talented students I have ever had in Computer Art and Design!), but what stood out even more was here willingness to ask for and accept criticism. For someone with as much innate talent as she possesses, it could be easy for Sydney to "phone it in" and still do extremely well in the class. Instead, she is consistently seeking my advice and then actually implementing changes based on that advice. In this time of virtual instruction, it is also relevant to point out that Sydney always comes to class on time, and is the only student who consistently shows herself on video in the Zoom meetings. She clearly takes to heart my request for as meaningful a connection as we can make through the computer screen, and it speaks volumes about her respect and empathy when she does."
                 </p>
               </td>
             </tr>
@@ -143,12 +140,11 @@
               </td>
             </tr>
           </table>
-
         </div>
       </section>
     </div>
 
-    <div class="Contact">
+    <div id="contact" class="Contact">
       <section class="contact-section">
         <h2>Let's Work Together!</h2>
         <div class="contact-details">
@@ -417,19 +413,19 @@
   }
 
   .name {
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: "Josefin Sans", sans-serif;
     font-size: 40px;
     margin-bottom: 10px;
   }
 
   .role {
-    font-family: 'Cardo', serif;
+    font-family: "Cardo", serif;
     font-size: 24px;
     margin-bottom: 20px;
   }
 
   .quote {
-    font-family: 'Cardo', serif;
+    font-family: "Cardo", serif;
     font-size: 15px;
     font-style: italic;
     line-height: 1.6;
