--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <img src="Sydney_Tran_MainImage.png" alt="Sydney Tran">
         </div>
         <div class="about-text">
-          <h2>Hello, Bonjour :)</h2>
+          <h1>Hello, Bonjour :)</h1>
           <p>My name is Sydney Tran and I am the <u>heart of creativity</u> for my users.</p>
           <p>
             I design pieces that are meaningful, unique, and impactful.
@@ -47,7 +47,7 @@
 
     <div id="photography" class="content">
       <section class="photography">
-        <h2>Photography</h2>
+        <h1>Photography</h1>
         <div class="white-line"></div>
         <p>
           I adeptly handle seven different photographic styles—including product, fashion, long exposure, portraits, landscapes, wildlife, and action pictures—all while capturing moments that go beyond the usual and shed light on distinctive viewpoints. I have an intuitive eye for detail and am proficient in Adobe Lightroom. My artistic ability combines compositional brilliance with the technical dexterity of using a DSLR to create visually compelling and inspirational storytelling.
@@ -63,7 +63,7 @@
     <div id="graphic designs" class="Graphic Designs">
       <section class="graphic-designs">
         <div class="graphic-designs-content">
-          <h2>Graphic Designs</h2>
+          <h1>Graphic Designs</h1>
           <div class="red-line"></div>
           <p class="designs-blurb">
             I am an expert in Adobe Illustrator and Photoshop, and I use my imagination to create visually striking and inventive designs by skillfully utilizing a variety of tools, such as 3D rendering, the accuracy of the pen tool, and the fluidity of the warp tool.
@@ -80,7 +80,7 @@
     <div id="cinematography" class="Cinematography">
       <section class="cinematography">
         <div class="cinematography-content">
-          <h2>Cinematography</h2>
+          <h1>Cinematography</h1>
           <div class="white-line"></div>
           <p class="cinematography-blurb">
             I have a strong sense of storytelling and am skilled with the Adobe Suite, especially Rush and Premiere Pro. I use these skills to craft complex stories into engaging documentaries and movies. Through the use of mood boards, storyboards, and a variety of lighting, audio, and filmmaking tools, I create immersive visual experiences by bringing the imagination to life.
@@ -103,7 +103,7 @@
     <div id="what they say" class="What They Say">
       <section class="What They Say">
         <div class="what-they-say-content">
-          <h2>What They Say</h2>
+          <h1>What They Say</h1>
           <div class="red-line"></div>
           <table class="testimonial-table">
             <tr>
@@ -146,7 +146,7 @@
 
     <div id="contact" class="Contact">
       <section class="contact-section">
-        <h2>Let's Work Together!</h2>
+        <h1>Let's Work Together!</h1>
         <div class="contact-details">
           <div class="contact-form-container">
             <form action="mailto:ssss@uwaterloo.ca" method="post" enctype="text/plain">
@@ -191,6 +191,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 30px 0 0 70px;
+    font-size: 24px;
   }
 
   .left-section {
@@ -230,7 +231,7 @@
     font-family: "Cardo", serif;
   }
 
-  .about-text h2 {
+  .about-text h1 {
     font-family: "Josefin Sans", sans-serif;
     font-size: 80px;
     color: #5B0D0D;
@@ -251,7 +252,7 @@
     color: #FFFFFF;
   }
 
-  .photography h2 {
+  .photography h1 {
     font-family: "Josefin Sans", sans-serif;
     font-size: 60px;
   }
@@ -296,7 +297,7 @@
     color: #5B0D0D;
   }
 
-  .graphic-designs-content h2 {
+  .graphic-designs-content h1 {
     font-family: "Josefin Sans", sans-serif;
     font-size: 60px;
     margin-bottom: 30px;
@@ -342,7 +343,7 @@
     text-align: center;
   }
 
-  .cinematography-content h2 {
+  .cinematography-content h1 {
     font-family: "Josefin Sans", sans-serif;
     font-size: 60px;
     margin-bottom: 30px;
@@ -393,7 +394,7 @@
     color: #5B0D0D;
   }
 
-  .what-they-say-content h2 {
+  .what-they-say-content h1 {
     font-family: "Josefin Sans", sans-serif;
     font-size: 60px;
     margin-bottom: 30px;
@@ -403,12 +404,10 @@
   .testimonial-table {
     width: 100%;
     border-spacing: 0 40px;
-    /* Adjust vertical spacing between rows */
   }
 
   .testimonial-table td {
     padding: 0 40px;
-    /* Adjust horizontal padding within cells */
     vertical-align: top;
   }
 
@@ -438,7 +437,7 @@
     padding: 40px;
   }
 
-  .contact-section h2 {
+  .contact-section h1 {
     padding-left: 70px;
     font-family: "Josefin Sans", sans-serif;
     font-size: 60px;
@@ -472,6 +471,7 @@
     padding: 20px;
     width: 837px;
     height: 350px;
+  
   }
 
   .form-row {
