--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
       </div>
     </div>
 
-    <div id="about" class="content">
+    <div class="content">
       <section class="about-me">
         <div class="about-image">
           <img src="Sydney_Tran_MainImage.png" alt="Sydney Tran">
         </div>
         <div class="about-text">
-          <h1>Hello, Bonjour :)</h1>
+          <h1>
+            <a name="about">Hello, Bonjour :)</a>
+          </h1>
           <p>My name is Sydney Tran and I am the <u>heart of creativity</u> for my users.</p>
           <p>
             I design pieces that are meaningful, unique, and impactful.
@@ -45,9 +47,11 @@
       </section>
     </div>
 
-    <div id="photography" class="content">
+    <div class="content">
       <section class="photography">
-        <h1>Photography</h1>
+        <h1>
+          <a name="photography">Photography</a>
+        </h1>
         <div class="white-line"></div>
         <p>
           I adeptly handle seven different photographic styles—including product, fashion, long exposure, portraits, landscapes, wildlife, and action pictures—all while capturing moments that go beyond the usual and shed light on distinctive viewpoints. I have an intuitive eye for detail and am proficient in Adobe Lightroom. My artistic ability combines compositional brilliance with the technical dexterity of using a DSLR to create visually compelling and inspirational storytelling.
@@ -60,10 +64,12 @@
       </section>
     </div>
 
-    <div id="graphic designs" class="Graphic Designs">
+    <div class="Graphic Designs">
       <section class="graphic-designs">
         <div class="graphic-designs-content">
-          <h1>Graphic Designs</h1>
+          <h1>
+            <a name="graphic designs">Graphic Designs</a>
+          </h1>
           <div class="red-line"></div>
           <p class="designs-blurb">
             I am an expert in Adobe Illustrator and Photoshop, and I use my imagination to create visually striking and inventive designs by skillfully utilizing a variety of tools, such as 3D rendering, the accuracy of the pen tool, and the fluidity of the warp tool.
@@ -77,10 +83,12 @@
       </section>
     </div>
 
-    <div id="cinematography" class="Cinematography">
+    <div class="Cinematography">
       <section class="cinematography">
         <div class="cinematography-content">
-          <h1>Cinematography</h1>
+          <h1>
+            <a name="cinematography">Cinematography</a>
+          </h1>
           <div class="white-line"></div>
           <p class="cinematography-blurb">
             I have a strong sense of storytelling and am skilled with the Adobe Suite, especially Rush and Premiere Pro. I use these skills to craft complex stories into engaging documentaries and movies. Through the use of mood boards, storyboards, and a variety of lighting, audio, and filmmaking tools, I create immersive visual experiences by bringing the imagination to life.
@@ -100,10 +108,12 @@
       </section>
     </div>
 
-    <div id="what they say" class="What They Say">
+    <div class="What They Say">
       <section class="What They Say">
         <div class="what-they-say-content">
-          <h1>What They Say</h1>
+          <h1>
+            <a name="what they say">What They Say</a>
+          </h1>
           <div class="red-line"></div>
           <table class="testimonial-table">
             <tr>
@@ -144,9 +154,11 @@
       </section>
     </div>
 
-    <div id="contact" class="Contact">
+    <div class="Contact">
       <section class="contact-section">
-        <h1>Let's Work Together!</h1>
+        <h1>
+          <a name="contact">Let's Work Together!</a>
+        </h1>
         <div class="contact-details">
           <div class="contact-form-container">
             <form action="mailto:ssss@uwaterloo.ca" method="post" enctype="text/plain">
